deploy/k8s/redis-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis
  namespace: challenge-demo
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: redis
  ports:
    - port: 6379
      targetPort: redis
      name: redis
